<resources>
    <string name="app_name">CodeproofsClasses</string>
    <string name="title_activity_sub_menu">SubMenuActivit</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_submenu">SubmenuActivity</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="training_and_development_center">Training and Development Center</string>
    <string name="enquire_now">Enquire Now</string>
    <string name="software_testing">Software Testing</string>
    <string name="web_development">Web Development</string>
    <string name="personality_development">Personality Development</string>
    <string name="string_personality_development" />
    <string name="programming_in_c">Programming in C</string>
    <string name="AndroidApplicationDevelopment">Android Application Development</string>
    <string name="coursedetails">Course Details</string>
    <string name="login">Login</string>
    <string name="info">Info</string>
    <string name="help">Help</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="image">image</string>
    <string name="course_title">Course Title</string>
    <string name="profile">Profile</string>
    <string name="change_password">Change Password</string>
    <string name="logout">Logout</string>
    <string name="nav_draw_open">Open Navigation Draw</string>
    <string name="nav_draw_close">Close Navigation Draw</string>
    <string name="batch_timings">Batch Timings</string>
    <string name="imagesprofile">images</string>
</resources>